a1/brendan_gordon/TEST_PROGRAMS/invalidtype/scott_cooper/invalid_string_op.min
var x : string;
x = "hello" + 1;

